# aoc_2024

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  REUSE.toml
.cargo/: config.toml
.github/workflows/: ci.yml
.reuse/: dep5
bonus/day14/generator/: Cargo.toml  README.md  example1.txt  example2.txt
bonus/day14/generator/src/: main.rs
bonus/miraos_nrf52840/: day4.c
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs  map-templ.rs
