# SPDX-FileCopyrightText: 2024 Sebastian Andersson <sebastian@bittr.nu>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "advent_of_code_2024"
version = "0.1.0"
authors = ["Sebastian Andersson <sebastian@bittr.nu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
cached = "0.46.1"
itertools = "0.12.0"
num = "0.4.1"
rayon = "1.5.0"
regex = "1.4.2"
sscanf = "0.4.0"
advent_of_tools = {git = "https://github.com/bofh69/advent_of_tools.git"}
memoize = "0.4.2"
ahash = "0.8.11"
rand = "0.8.5"
