# SPDX-FileCopyrightText: 2024 2024
# SPDX-FileCopyrightText: 2024 Sebastian Andersson
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "generator"
version = "0.1.0"
edition = "2021"

[dependencies]
advent_of_tools = {git = "https://github.com/bofh69/advent_of_tools.git"}
pico-args = "0.5.0"
rand = "0.8.5"
